# Form-appication-full-stack-rust-actix-vue

./: Cargo.toml  README.md
backend-actix/: Cargo.toml  LICENSE  README.md  form names.txt  form_names.txt
backend-actix-RUST/: .env  Cargo.toml
backend-actix-RUST/src/: handler.rs  main.rs  model.rs  schema.rs
backend-actix-RUST/src/links/: mod.rs
backend-actix-RUST/static/: index.html
backend-actix-RUST/static/Form Pages/: astrology_form.html  chatting_form.html  default_form.html  game_form.html  software_form.html  sport_form.html
backend-actix-RUST/static/Form Pages/form javascript/: formMessageGetApi.js
backend-actix-RUST/static/css/: formbasic.css  index.css  style.css
backend-actix-RUST/static/templates/: bookpage_template.html
backend-actix/SQL queries/: the sql tables and inserts examples to work on system.sql
backend-actix/SQL queries/insert tables/: index 2 answer message with no image.sql
backend-actix/SQL queries/insert tables/form message tables/crate tables/: all create tables.sql  one create table of template example to work on.sql
backend-actix/SQL queries/insert tables/form message tables/insert tables/: index 1 normal form message with no image.sql
backend-actix/src/: form_names.txt  handler.rs  main.rs  model.rs  schema.rs
backend-actix/src/handler/: create_form_handler.rs  form_handler.rs  handler.rs  mod.rs  table_form_handler.rs  user_handler.rs
backend-actix/src/handler/models/: form_models.rs  mod.rs  user_models.rs
backend-actix/src/links/: mod.rs  template_links.rs
backend-actix/static/: index.html
backend-actix/static/Form Pages/: anime_form.html  astrology_form.html  chatting_form.html  default_form.html
backend-actix/static/javascript/: formMessageApi.js  registerUser.js
backend-actix/static/templates/: form_page_template.html  formpage_template.html
backend-actix/static/user pages/: user_default.html  user_login.html  user_register.html
front-end-vue/MentorWebsiteFront/: README.md  package-lock.json
react-front/: package-lock.json  package.json
src/: main.rs
src/links/: mod.rs
static/: index.html
svelte-frontend/: package-lock.json
svelte-frontend-js/: package.json
svelte-frontend-js/src/routes/: +layout.svelte  +page.svelte  Header.svelte
svelte-frontend/src/routes/: +page.svelte
vue-frontend-js/: package.json
vue-frontend-js/src/: App.vue  main.js
(+14 files in other folders)
