[package]
name = "hello-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-files = "0.6.2"
actix-rt = "2.9.0"
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
rand = "0.8.5"
handlebars = "4.5.0"  # Add this line for Handlebars template support
