[package]
name = "backend-actix"
version = "0.1.0"
edition = "2021"
authors = ["Fahrettin baştürk", "fahrettin_basturk@hotmail.com"]
description = "web api for web forms"
license-file = "LICENSE.txt"
keywords = ["actix","web development","web api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-files = "0.6.2"
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
handlebars = "4.5.0" 
actix-cors = "0.6.4"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.1"
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "mysql", "chrono", "uuid"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
rand = "0.8.5"

# 68 Aksaray, HR